# otzar-control-tower

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  render.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
docs/: OTZAR_LIVE_DEPLOY_0.md  OTZAR_TWIN_AUTHORITY_MEMORY_SCOPE_AUDIT.md  OTZAR_V1_DEPLOYMENT_CHECKLIST.md  OTZAR_V1_LIVE_0_AUDIT.md  OTZAR_V1_LIVE_1_RUNBOOK.md  OTZAR_V1_LIVE_4_VOICE_INPUT.md  OTZAR_V1_TWO_COMPUTER_SMOKE.md  RENDER_DEPLOY_NOTES.md  SECTION_12_DISCIPLINE.md  ambient-voice-readiness.md  avp2-governed-access-connector.md  desktop.md
docs/operations/: otzar-polyglot-runtime-architecture.md  otzar-work-os-gap-audit.md
docs/otzar/: AGENT_CONTINUITY_POINTER.md  AMBIENT_INTERFACE_RECONCILIATION_MAP.md  AMBIENT_WORK_OS_PRODUCT_DOCTRINE.md  EMPLOYEE_FLOW_SMOKE_HARNESS.md  EXPERIENCE_GOVERNING_SPEC.md  FOUNDER_READINESS_HANDOFF.md  LIVE_COLLABORATION_MATRIX.md  (+57 more)
scripts/: avp2-live-local.mjs  copy-signal-lint.mjs  otzar-ambient-autosmoke.sh  otzar-clear-lockout.sh  otzar-gate-rebind.sh  otzar-live-evidence.sh  otzar-r03-cross-tenant-adversarial.mjs  otzar-r03-doc-append-propagation-proof.mjs  otzar-r03-live-product-proof.mjs  otzar-r03-project-loop-downstream.mjs  otzar-r03-project-loop-extract-rerun.mjs  otzar-r03-project-loop-ui-reconcile.mjs  otzar-r03-s250-live-provision.mjs  otzar-render-deploy.sh  otzar-s250-pressure.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  (+6 more)
tests/: setup.ts
(+882 files in other folders)
