[package]
name = "otzar-desktop"
version = "0.1.0"
description = "Otzar desktop shell — Tauri wrapper around the Control Tower frontend"
authors = ["NIOV Labs"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77"

[lib]
name = "otzar_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
